added review service

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,9 @@
 #
-   spring.application.name=${APPLICATION_NAME:OneHealth-discountservice}
+   spring.application.name=${APPLICATION_NAME:OneHealth-reviewservice}
 
     # Database configuration
 
-    spring.datasource.url=jdbc:postgresql://${POSTGRES_HOST:localhost}:5432/${POSTGRES_DB:discountservice}?sessionVariables=sql_mode='NO_ENGINE_SUBSTITUTION'&jdbcCompliantTruncation=false
+    spring.datasource.url=jdbc:postgresql://${POSTGRES_HOST:localhost}:5432/${POSTGRES_DB:reviewservice}?sessionVariables=sql_mode='NO_ENGINE_SUBSTITUTION'&jdbcCompliantTruncation=false
 
     spring.datasource.username=${POSTGRES_USER:postgres}
 
