--- a/pom.xml
+++ b/pom.xml
@@ -9,10 +9,10 @@
 		<relativePath /> <!-- lookup parent from repository -->
 	</parent>
 	<groupId>com.oneHealth</groupId>
-	<artifactId>discount</artifactId>
+	<artifactId>review</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
-	<name>discount</name>
-	<description>Discount service for oneHealth</description>
+	<name>review</name>
+	<description>Review service for oneHealth</description>
 	<properties>
 		<java.version>17</java.version>
 		<spring-cloud.version>2022.0.4</spring-cloud.version>
